--- a/Preprocess_Methodology_Conclusion_NLP_News_part_2.ipynb
+++ b/Preprocess_Methodology_Conclusion_NLP_News_part_2.ipynb
@@ -3449,7 +3449,7 @@
         "id": "phNaED4W64rm"
       },
       "source": [
-        "both model seems to have the same perfomance, we will use bert since it seems to have slightly higher accuracy score than roberta."
+        "both model seems to have the same perfomance, we will use bert since it seems to converge slightly faster than roberta."
       ]
     },
     {
