--- a/Preprocess_Methodology_NLP_News_part_2.ipynb
+++ b/Preprocess_Methodology_NLP_News_part_2.ipynb
@@ -712,6 +712,7 @@
       },
       "source": [
         "# Preprocessing\n",
+        "* add more data\n",
         "* drop subject\n",
         "* drop date\n",
         "* remove duplicate\n",
