--- a/Preprocess_Methodology_NLP_News_part_2.ipynb
+++ b/Preprocess_Methodology_NLP_News_part_2.ipynb
@@ -910,8 +910,8 @@
         "df_train['title'] = df_train['title'].str.title()\n",
         "df_unseen['title'] = df_unseen['title'].str.title()\n",
         "\n",
-        "df_train['text'] = df_train['title'].str.lower()\n",
-        "df_unseen['text'] = df_unseen['title'].str.lower()"
+        "df_train['text'] = df_train['text'].str.lower()\n",
+        "df_unseen['text'] = df_unseen['text'].str.lower()"
       ],
       "execution_count": null,
       "outputs": []
