--- a/Preprocess_Methodology_NLP_News_part_2.ipynb
+++ b/Preprocess_Methodology_NLP_News_part_2.ipynb
@@ -1593,9 +1593,9 @@
         "id": "CqRXNd8yqa0d"
       },
       "source": [
-        "tensor_train = tf.data.Dataset.from_tensor_slices((X_train['text'].values,y_train.values))\n",
-        "tensor_valid = tf.data.Dataset.from_tensor_slices((X_valid['text'].values,y_valid.values))\n",
-        "tensor_unseen = tf.data.Dataset.from_tensor_slices((X_unseen['text'].values,y_unseen.values))"
+        "tensor_train = tf.data.Dataset.from_tensor_slices((X_train['title'].values,y_train.values))\n",
+        "tensor_valid = tf.data.Dataset.from_tensor_slices((X_valid['title'].values,y_valid.values))\n",
+        "tensor_unseen = tf.data.Dataset.from_tensor_slices((X_unseen['title'].values,y_unseen.values))"
       ],
       "execution_count": null,
       "outputs": []
