--- a/Preprocess_Methodology_NLP_News_part_2.ipynb
+++ b/Preprocess_Methodology_NLP_News_part_2.ipynb
@@ -1503,7 +1503,7 @@
         "id": "xPnPUcLGKd5A"
       },
       "source": [
-        "Since there aren't much significant difference we will just use the text column since it contains the most information."
+        "We will only use the title since it seems to be more generalize than both title and text."
       ]
     },
     {
